check_output.txt
    Checking rdnsx-core v0.1.0 (R:\RDNSx\rdnsx-core)
warning: unused import: `debug`
 --> rdnsx-core\src\concurrency.rs:9:15
  |
9 | use tracing::{debug, warn, info};
  |               ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0282]: type annotations needed
   --> rdnsx-core\src\concurrency.rs:128:44
    |
128 |                         Ok(Ok(records)) => Ok(records),
    |                                            ^^ cannot infer type of the type parameter `E` declared on the enum `Result`
    |
help: consider specifying the generic arguments
    |
128 |                         Ok(Ok(records)) => Ok::<Vec<dns_records::DnsRecord>, E>(records),
    |                                              ++++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `Vec<serde_json::Value>: elasticsearch::http::request::Body` is not satisfied
   --> rdnsx-core\src\export\elasticsearch.rs:64:21
    |
 64 |             .body::<Vec<Value>>(bulk_body)
    |              ----   ^^^^^^^^^^ the trait `elasticsearch::http::request::Body` is not implemented for `Vec<serde_json::Value>`
    |              |
    |              required by a bound introduced by this call
    |
    = help: the trait `elasticsearch::http::request::Body` is implemented for `Vec<u8>`
note: required by a bound in `Bulk::<'a, 'b, B>::body`
   --> C:\Users\ruben\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\elasticsearch-9.1.0-alpha.1\src\root\mod.rs:144:12
    |
142 |     pub fn body<T>(self, body: Vec<T>) -> Bulk<'a, 'b, NdBody<T>>
    |            ---- required by a bound in this associated function
143 |     where
144 |         T: Body,
    |            ^^^^ required by this bound in `Bulk::<'a, 'b, B>::body`

error[E0308]: mismatched types
   --> rdnsx-core\src\export\elasticsearch.rs:64:33
    |
 64 |             .body::<Vec<Value>>(bulk_body)
    |              ------------------ ^^^^^^^^^ expected `Vec<Vec<Value>>`, found `Vec<Value>`
    |              |
    |              arguments to this method are incorrect
    |
    = note: expected struct `Vec<Vec<serde_json::Value>>`
               found struct `Vec<serde_json::Value>`
note: method defined here
   --> C:\Users\ruben\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\elasticsearch-9.1.0-alpha.1\src\root\mod.rs:142:12
    |
142 |     pub fn body<T>(self, body: Vec<T>) -> Bulk<'a, 'b, NdBody<T>>
    |            ^^^^

error[E0599]: the method `send` exists for struct `Bulk<'_, '_, NdBody<Vec<serde_json::Value>>>`, but its trait bounds were not satisfied
   --> rdnsx-core\src\export\elasticsearch.rs:65:14
    |
 62 |           let response = self._client
    |  ________________________-
 63 | |             .bulk(BulkParts::Index(&self._index))
 64 | |             .body::<Vec<Value>>(bulk_body)
 65 | |             .send()
    | |             -^^^^ method cannot be called on `Bulk<'_, '_, NdBody<Vec<serde_json::Value>>>` due to unsatisfied trait bounds
    | |_____________|
    |
    |
   ::: C:\Users\ruben\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\elasticsearch-9.1.0-alpha.1\src\http\request.rs:102:1
    |
102 |   pub struct NdBody<T>(Vec<T>);
    |   -------------------- doesn't satisfy `_: Body`
    |
    = note: the following trait bounds were not satisfied:
            `Vec<serde_json::Value>: elasticsearch::http::request::Body`
            which is required by `NdBody<Vec<serde_json::Value>>: elasticsearch::http::request::Body`

error[E0282]: type annotations needed
  --> rdnsx-core\src\export\elasticsearch.rs:62:24
   |
62 |           let response = self._client
   |  ________________________^
63 | |             .bulk(BulkParts::Index(&self._index))
64 | |             .body::<Vec<Value>>(bulk_body)
65 | |             .send()
66 | |             .await
   | |__________________^ cannot infer type

error[E0282]: type annotations needed
  --> rdnsx-core\src\export\elasticsearch.rs:70:30
   |
70 |             let error_text = response.text().await.unwrap_or_else(|_| "Unavailable".to_string());
   |                              ^^^^^^^^^^^^^^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0277, E0282, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `rdnsx-core` (lib) generated 1 warning
error: could not compile `rdnsx-core` (lib) due to 6 previous errors; 1 warning emitted
